User-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryvhd1032.azurecr.io/tripinsights/userprofile:latest
        ports:
        - containerPort: 80
      nodeSelector:    
        kubernetes.io/os: linux
