TripsAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripsapi 
  namespace: api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripsapi
  template:
    metadata:
      labels:
        app: tripsapi
    spec:
      containers:
      - name: tripsapi
        image: registryvhd1032.azurecr.io/tripinsights/trips:latest
        ports:
        - containerPort: 80
      nodeSelector:    
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: tripsapi
  namespace: api 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripsapi
