Tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryvhd1032.azurecr.io/tripinsights/tripviewer:latest
        ports:
        - containerPort: 80
      nodeSelector:    
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: api
    protocol: TCP
  selector:
    app: tripviewer
