UserAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi 
  namespace: api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: registryvhd1032.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: sql_password
          mountPath: /secrets
          readOnly: true
      volumes:
        - name: sql_password
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "tripsinsightssec"
      nodeSelector:    
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: userapi
  namespace: api 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: userapi
