ingress-rules-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripinsights-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"  
spec:
  rules:
  - http:
     paths:
     - backend:
         serviceName: poi
         servicePort: 80
       path: /api/poi(/|$)(.*)
     - backend:
         serviceName: tripsapi
         servicePort: 80
       path: /api/trips(/|$)(.*)
     - backend:
         serviceName: userapi
         servicePort: 80
       path: /api/user(/|$)(.*)
     - backend:
         serviceName: userprofile
         servicePort: 80
       path: /api/user-java(/|$)(.*)
