ingress-rules-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripinsights-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
     paths:
     - backend:
         serviceName: tripviewer
         servicePort: 80
       path: /(.*)
