ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripinsights-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
     paths:
     - backend:
         serviceName: poi.api
         servicePort: 80
       path: /api/poi(/|$)(.*)
     - backend:
         serviceName: tripsapi.api
         servicePort: 80
       path: /api/trips(/|$)(.*)
     - backend:
         serviceName: userapi.api
         servicePort: 80
       path: /api/user(/|$)(.*)
     - backend:
         serviceName: userprofile.api
         servicePort: 80
       path: /api/user-java(/|$)(.*)
     - backend:
         serviceName: tripviewer.web
         servicePort: 80
       path: /(/|$)(.*)
